--- a/index.html
+++ b/index.html
@@ -120,15 +120,17 @@
 					<div class="inner">
 						<div class="content">
 							<h3 class="major">Selected Projects</h3>
+							
 							<section class="features">
+								
 								<article>
 									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-									<h3 class="major">Sed feugiat lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim
-										dapibus ultrices.
+									<h3 class="major">Not Currently deploy</h3>
+									<p>Projects will be coming soon
 									</p>
 									<a href="#" class="special">Learn more</a>
 								</article>
+								<!--
 								<article>
 									<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 									<h3 class="major">Nisl placerat</h3>
@@ -137,6 +139,7 @@
 									</p>
 								</article>
 							</section>
+							-->
 
 							<a class="special" href="https://github.com/ShouwangH">GitHub <span
 									class="icon brands fa-github"></a>
