--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 								
 								<article>
 									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-									<h3 class="major">Not Currently deploy</h3>
+									<h3 class="major">Not Currently deployed</h3>
 									<p>Projects will be coming soon
 									</p>
 									<a href="#" class="special">Learn more</a>
