--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
 			<section id="banner">
 				<div class="inner">
 					<h2>Shouwang Huang</h2>
-					<p>Software Engineer, App Developer, and Coding Enthusiast</p>
+					<p>Software Developer</p>
+					<ul class="actions">
+						<li><a class="button icon solid fa-download"
+								href="https://docs.google.com/document/d/1FObQsZ8wthdY8H1NIUp8-7QL2JJOvvlRGoLL7kQgYVY/edit?usp=sharing">
+								Resume</a></li>
+						<li><a class="button icon solid fa-envelope" 
+							href="mailto:shouwangh82@gmail.com">
+							Email</a></li>
+						<li><a class="button icon brands fa-linkedin"
+							href="https://www.linkedin.com/in/shouwanghuang"
+							>LinkedIn</a></li>
+						<li><a class="button icon brands fa-github"
+							href="https://github.com/ShouwangH"
+							>Github</a></li>
+					</ul>
 				</div>
 			</section>
 
@@ -56,18 +70,11 @@
 								<p>I consider myself a builder of dream apps and professional killer of bugs. I'm also
 									a problem solver with experience in the financial and manufacturing spheres which
 									allows me to bring new perspectives and ideas to existing challenges.</p>
-								<p>Feel free to peruse the site and contact me if the fancy strikes.</p>
+								<p>Feel free to peruse the site and get in touch with me.</p>
 							</div>
-							<ul class="actions">
-								<li>
-									<a class="button primary icon solid fa-download"
-										href="https://docs.google.com/document/d/1FObQsZ8wthdY8H1NIUp8-7QL2JJOvvlRGoLL7kQgYVY/edit?usp=sharing">Resume</a>
-								</li>
-								<li><a href="mailto:shouwangh82@gmail.com"
-										class="button primary icon solid fa-envelope">Email</a></li>
-							</ul>
 
-							</p>
+
+
 
 
 						</div>
@@ -108,9 +115,6 @@
 								</li>
 								<li></li>
 							</ul>
-
-							<a class="special" href="https://www.linkedin.com/in/shouwang-huang-71155ab7/">LinkedIn
-								<span class="icon brands fa-linkedin"></a>
 						</div>
 
 					</div>
@@ -120,9 +124,30 @@
 					<div class="inner">
 						<div class="content">
 							<h3 class="major">Selected Projects</h3>
-							
+
 							<section class="features">
-								
+
+								<article>
+									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+									<h3 class="major">Not Currently deployed</h3>
+									<p>Projects will be coming soon
+									</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+									<h3 class="major">Not Currently deployed</h3>
+									<p>Projects will be coming soon
+									</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+									<h3 class="major">Not Currently deployed</h3>
+									<p>Projects will be coming soon
+									</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
 								<article>
 									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 									<h3 class="major">Not Currently deployed</h3>
@@ -140,9 +165,6 @@
 								</article>
 							</section>
 							-->
-
-							<a class="special" href="https://github.com/ShouwangH">GitHub <span
-									class="icon brands fa-github"></a>
 						</div>
 				</section>
 			</div>
