--- a/index.html
+++ b/index.html
@@ -45,15 +45,11 @@
 						<li><a class="button icon solid fa-download"
 								href="https://docs.google.com/document/d/1FObQsZ8wthdY8H1NIUp8-7QL2JJOvvlRGoLL7kQgYVY/edit?usp=sharing">
 								Resume</a></li>
-						<li><a class="button icon solid fa-envelope" 
-							href="mailto:shouwangh82@gmail.com">
-							Email</a></li>
+						<li><a class="button icon solid fa-envelope" href="mailto:shouwangh82@gmail.com">
+								Email</a></li>
 						<li><a class="button icon brands fa-linkedin"
-							href="https://www.linkedin.com/in/shouwanghuang"
-							>LinkedIn</a></li>
-						<li><a class="button icon brands fa-github"
-							href="https://github.com/ShouwangH"
-							>Github</a></li>
+								href="https://www.linkedin.com/in/shouwanghuang">LinkedIn</a></li>
+						<li><a class="button icon brands fa-github" href="https://github.com/ShouwangH">Github</a></li>
 					</ul>
 				</div>
 			</section>
@@ -125,68 +121,132 @@
 						<div class="content">
 							<h3 class="major">Selected Projects</h3>
 
-							<section class="features">
+							<!-- Slideshow container -->
+							<div class="slideshow-container">
 
-								<article>
-									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-									<h3 class="major">Not Currently deployed</h3>
-									<p>Projects will be coming soon
-									</p>
-									<a href="#" class="special">Learn more</a>
-								</article>
-								<article>
-									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-									<h3 class="major">Not Currently deployed</h3>
-									<p>Projects will be coming soon
-									</p>
-									<a href="#" class="special">Learn more</a>
-								</article>
-								<article>
-									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-									<h3 class="major">Not Currently deployed</h3>
-									<p>Projects will be coming soon
-									</p>
-									<a href="#" class="special">Learn more</a>
-								</article>
-								<article>
-									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-									<h3 class="major">Not Currently deployed</h3>
-									<p>Projects will be coming soon
-									</p>
-									<a href="#" class="special">Learn more</a>
-								</article>
-								<!--
-								<article>
-									<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-									<h3 class="major">Nisl placerat</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim
-										dapibus ultrices.
-									</p>
-								</article>
-							</section>
-							-->
-						</div>
+								<!-- Full-width images with number and caption text -->
+								<div class="mySlides fade">
+									<div class="numbertext">1 / 3</div>
+									<img src="images\pic01.jpg" style="width:100%">
+									<div class="middle">
+										<div class="text">
+											<div class="align-left">
+												<h1>Project 1</h1>
+
+												<p>Project Description Lorem ipsum dolor sit amet, consectetur
+													adipisicing elit. Quaerat inventore libero quos necessitatibus
+													cupiditate, tenetur consectetur a ex ut debitis dolor iste, deleniti
+													sunt harum, laudantium amet sit fugit est velit praesentium. Nam eum
+													velit porro? Eius nesciunt odio voluptas!</p>
+												<ul class=" actions small">
+													<li>
+														<p class="button fit primary icon brands fa-python">Python</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-html5">HTML</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-css3">CSS</p>
+													</li>
+												</ul>
+												<a class="special" href="">View Site</a>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<div class="mySlides fade">
+									<div class="numbertext">2 / 3</div>
+									<img src="images\pic02.jpg" style="width:100%">
+									<div class="middle">
+										<div class="text">
+											<div class="align-left">
+												<h1>Project 2</h1>
+
+												<p>Project Description Lorem ipsum dolor sit amet, consectetur
+													adipisicing elit. Quaerat inventore libero quos necessitatibus
+													</p>
+												<ul class=" actions small">
+													<li>
+														<p class="button fit primary icon brands fa-python">Python</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-html5">HTML</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-css3">CSS</p>
+													</li>
+												</ul>
+												<a class="special" href="">View Site</a>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<div class="mySlides fade">
+									<div class="numbertext">3 / 3</div>
+									<img src="images\pic03.jpg" style="width:100%">
+									<div class="middle">
+										<div class="text">
+											<div class="align-left">
+												<h1>Project 3</h1>
+
+												<p>Project Description Lorem ipsum dolor sit amet, consectetur
+													adipisicing elit. Quaerat inventore libero quos necessitatibus
+													cupiditate, tenetur consectetur a ex ut debitis dolor iste, deleniti
+												</p>
+												<ul class=" actions small">
+													<li>
+														<p class="button fit primary icon brands fa-python">Python</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-html5">HTML</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-css3">CSS</p>
+													</li>
+												</ul>
+												<a class="special" href="">View Site</a>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<!-- Next and previous buttons -->
+								<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+								<a class="next" onclick="plusSlides(1)">&#10095;</a>
+							</div>
+							<br>
+
+							<!-- The dots/circles -->
+							<div style="text-align:center">
+								<span class="dot" onclick="currentSlide(1)"></span>
+								<span class="dot" onclick="currentSlide(2)"></span>
+								<span class="dot" onclick="currentSlide(3)"></span>
+							</div>
 				</section>
 			</div>
 		</section>
+	</div>
+	</section>
 
-		<!-- Footer -->
-		<section id="footer">
-			<div class="inner">
-				<h2 class="major">Get in touch</h2>
+	<!-- Footer -->
+	<section id="footer">
+		<div class="inner">
+			<h2 class="major">Get in touch</h2>
 
-				<div class="row aln-center">
-					<a class="icon solid fa-envelope col-1" href="mailto:shouwangh82@gmail.com"></a>
-					<a class="icon brands fa-github col-1" href="https://github.com/ShouwangH"></a>
-					<a class="icon brands fa-linkedin col-1" href="https://www.linkedin.com/in/shouwanghuang/"></a>
-				</div>
-
-				<ul class="copyright">
-					<li>&copy; Shouwang Huang. All rights reserved.</li>
-					<li>Design: <a href="https://html5up.net/uploads/demos/solid-state/index.html">HTML5 UP</a></li>
-				</ul>
+			<div class="row aln-center">
+				<a class="icon solid fa-envelope col-1" href="mailto:shouwangh82@gmail.com"></a>
+				<a class="icon brands fa-github col-1" href="https://github.com/ShouwangH"></a>
+				<a class="icon brands fa-linkedin col-1" href="https://www.linkedin.com/in/shouwanghuang/"></a>
 			</div>
-		</section>
+
+			<ul class="copyright">
+				<li>&copy; Shouwang Huang. All rights reserved.</li>
+				<li>Design: <a href="https://html5up.net/uploads/demos/solid-state/index.html">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</section>
 
 	</div>
 
@@ -197,6 +257,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/slideshow.js"></script>
 
 </body>
 
