--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 					<div class="inner">
 						<a class="image"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3 class="major">Background</h3>
 							<div class="align-left">
+								<h3 class="major">Background</h3>
 								<p>Hello, my name is Shouwang and I am a software developer
 									based in Chicago and a graduate of Northwestern University.
 								<p>I consider myself a builder of dream apps and professional killer of bugs. I'm also
@@ -232,19 +232,20 @@
 
 	<!-- Footer -->
 	<section id="footer">
-		<div class="inner">
+		<div class="inner" style="text-align:center">
 			<h2 class="major">Get in touch</h2>
 
-			<div class="row aln-center">
+			<div class="aln-center">
 				<a class="icon solid fa-envelope col-1" href="mailto:shouwangh82@gmail.com"></a>
 				<a class="icon brands fa-github col-1" href="https://github.com/ShouwangH"></a>
 				<a class="icon brands fa-linkedin col-1" href="https://www.linkedin.com/in/shouwanghuang/"></a>
 			</div>
-
+		
+			<div class="fade">
 			<ul class="copyright">
 				<li>&copy; Shouwang Huang. All rights reserved.</li>
-				<li>Design: <a href="https://html5up.net/uploads/demos/solid-state/index.html">HTML5 UP</a></li>
 			</ul>
+		</div>
 		</div>
 	</section>
 
