--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="wrapper">
 				<section id="one" class="wrapper spotlight style3">
 					<div class="inner">
-						<a class="image"><img src="images/pic01.jpg" alt="" /></a>
+						<a class="image"><img src="images/Profile pic compressed.jpg" alt="" /></a>
 						<div class="content">
 							<div class="align-left">
 								<h3 class="major">Background</h3>
@@ -98,6 +98,7 @@
 								</li>
 								<li>
 									<p class="button fit primary icon brands fa-react">React.js</p>
+								</li>
 								<li>
 									<p class="button fit primary icon brands fa-microsoft">Visual Basic</p>
 								</li>
@@ -127,20 +128,20 @@
 								<!-- Full-width images with number and caption text -->
 								<div class="mySlides fade">
 									<div class="numbertext">1 / 3</div>
-									<img src="images\pic01.jpg" style="width:100%">
+									<img src="images\pokemonsearch.gif" style="width:100%">
 									<div class="middle">
 										<div class="text">
 											<div class="align-left">
-												<h1>Project 1</h1>
+												
+												<h1>Pokedex</h1>
 
-												<p>Project Description Lorem ipsum dolor sit amet, consectetur
-													adipisicing elit. Quaerat inventore libero quos necessitatibus
-													cupiditate, tenetur consectetur a ex ut debitis dolor iste, deleniti
-													sunt harum, laudantium amet sit fugit est velit praesentium. Nam eum
-													velit porro? Eius nesciunt odio voluptas!</p>
+												<p>Pokedex frontend which accesses pokeapi and loads the pokedex with applicable information. Previous searches are saved in local storage and are also displayed in a card format.</p>
 												<ul class=" actions small">
 													<li>
-														<p class="button fit primary icon brands fa-python">Python</p>
+														<p class="button fit primary icon brands fa-js-square">Javascript</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-react">React.js</p>
 													</li>
 													<li>
 														<p class="button fit primary icon brands fa-html5">HTML</p>
@@ -149,7 +150,7 @@
 														<p class="button fit primary icon brands fa-css3">CSS</p>
 													</li>
 												</ul>
-												<a class="special" href="">View Site</a>
+												<a class="special" href="https://shouwangh.github.io/Search-PokeDex/" target="_blank">View Site</a>
 											</div>
 										</div>
 									</div>
@@ -157,18 +158,20 @@
 
 								<div class="mySlides fade">
 									<div class="numbertext">2 / 3</div>
-									<img src="images\pic02.jpg" style="width:100%">
+									<img src="images\preview.gif" style="width:100%">
 									<div class="middle">
 										<div class="text">
 											<div class="align-left">
-												<h1>Project 2</h1>
+												<h1>Weather App</h1>
 
-												<p>Project Description Lorem ipsum dolor sit amet, consectetur
-													adipisicing elit. Quaerat inventore libero quos necessitatibus
+												<p>Weather app which uses google geocaching to find longitude and latitude and input into weather api. There may be further updates to include accessing geolocation of user.
 													</p>
 												<ul class=" actions small">
 													<li>
-														<p class="button fit primary icon brands fa-python">Python</p>
+														<p class="button fit primary icon brands fa-js-square">Javascript</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-react">React.js</p>
 													</li>
 													<li>
 														<p class="button fit primary icon brands fa-html5">HTML</p>
@@ -177,7 +180,7 @@
 														<p class="button fit primary icon brands fa-css3">CSS</p>
 													</li>
 												</ul>
-												<a class="special" href="">View Site</a>
+												<a class="special" href="https://shouwangh.github.io/weather-app-react/" target="_blank">View Site</a>
 											</div>
 										</div>
 									</div>
@@ -189,24 +192,22 @@
 									<div class="middle">
 										<div class="text">
 											<div class="align-left">
-												<h1>Project 3</h1>
+												<h1>Coming Soon</h1>
 
-												<p>Project Description Lorem ipsum dolor sit amet, consectetur
-													adipisicing elit. Quaerat inventore libero quos necessitatibus
-													cupiditate, tenetur consectetur a ex ut debitis dolor iste, deleniti
+												<p>Keep your eyes peeled for more projects to come!
 												</p>
 												<ul class=" actions small">
-													<li>
-														<p class="button fit primary icon brands fa-python">Python</p>
-													</li>
-													<li>
-														<p class="button fit primary icon brands fa-html5">HTML</p>
-													</li>
-													<li>
-														<p class="button fit primary icon brands fa-css3">CSS</p>
-													</li>
+													<li><a class="button primary icon solid fa-download"
+														href="https://docs.google.com/document/d/1FObQsZ8wthdY8H1NIUp8-7QL2JJOvvlRGoLL7kQgYVY/edit?usp=sharing">
+														Resume</a></li>
+												<li><a class="button primary icon solid fa-envelope" href="mailto:shouwangh82@gmail.com">
+														Email</a></li>
+												<li><a class="button primary icon brands fa-linkedin"
+														href="https://www.linkedin.com/in/shouwanghuang">LinkedIn</a></li>
+												<li><a class="button primary icon brands fa-github" href="https://github.com/ShouwangH">Github</a></li>
+													
 												</ul>
-												<a class="special" href="">View Site</a>
+												<a class="special" href="https://github.com/ShouwangH">View Site</a>
 											</div>
 										</div>
 									</div>
