--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 								<!-- Full-width images with number and caption text -->
 								<div class="mySlides fade">
-									<div class="numbertext">1 / 3</div>
+									<div class="numbertext">1 / 4</div>
 									<img src="images\pokemonsearch.gif" style="width:100%">
 									<div class="middle">
 										<div class="text">
@@ -157,7 +157,7 @@
 								</div>
 
 								<div class="mySlides fade">
-									<div class="numbertext">2 / 3</div>
+									<div class="numbertext">2 / 4</div>
 									<img src="images\preview.gif" style="width:100%">
 									<div class="middle">
 										<div class="text">
@@ -185,9 +185,36 @@
 										</div>
 									</div>
 								</div>
+								
+									<div class="mySlides fade">
+									<div class="numbertext">3 / 4</div>
+									<img src="images\screenrec.gif" style="width:100%">
+									<div class="middle">
+										<div class="text">
+											<div class="align-left">
+												<h1>Screen Recording Extension</h1>
+
+												<p>Chrome Extensions that uses MediaRecorder API to screen capture windows or tabs in browser and allows them to be downloaded in mp4 format.
+												</p>
+												<ul class=" actions small">
+													<li>
+														<p class="button fit primary icon brands fa-js-square">Javascript</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-html5">HTML</p>
+													</li>
+													<li>
+														<p class="button fit primary icon brands fa-css3">CSS</p>
+													</li>
+												</ul>
+												<a class="special" href="https://github.com/ShouwangH/Screen-Record-App" target="_blank">View Site</a>
+											</div>
+										</div>
+									</div>
+								</div>
 
 								<div class="mySlides fade">
-									<div class="numbertext">3 / 3</div>
+									<div class="numbertext">4 / 4</div>
 									<img src="images\pic03.jpg" style="width:100%">
 									<div class="middle">
 										<div class="text">
